# remarkable_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  install.sh
.circleci/: config.yml
.github/workflows/: release.yml
.github/workflows-disabled/: README.md  ci.yml  release.yml
docs/: formatting-guide.md  mcp-plan.md
docs/protocol/: README.md
examples/: dump_rm.rs  extract_skeleton.rs  format-test.html  format-test.md  push_verbatim_image_page.rs  swap_text.rs  swap_text_md.rs  v6-connect-free-test.md  v6-full-page.md  v6-kitchen-sink.md  v6-multi-tables.md  v6-multi-text.md  v6-tables-test.md
scripts/: build-release.sh
skills/codex/: SKILL.md
skills/opencode/: SKILL.md
src/: api.rs  auth.rs  cli.rs  cloud_api.rs  config.rs  convert.rs  device_auth.rs  epub.rs  error.rs  jobs.rs  lib.rs  logging.rs  main.rs  markdown.rs  notebook.rs  raster.rs  retry.rs  skills.rs  source.rs  sync.rs  sync_v3.rs  token_helper.rs  token_store.rs
src/v6/: blocks.rs  image.rs  markdown.rs  mod.rs  page.rs  reader.rs  stream.rs  writer.rs
tests/: v6_decode.rs  v6_markdown.rs  v6_roundtrip.rs
tools/v6-samples/: FORMAT.md
