[package]
name = "rr"
version = "0.1.0"
edition = "2021"
authors = ["rr user"]
description = "CLI tool to sync markdown files to reMarkable"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
pulldown-cmark = "0.12"
base64 = "0.22"
anyhow = "1.0"
dirs = "5.0"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["sync-secret-service", "apple-native"] }
url = "2.5"
sha2 = "0.10"
rand = "0.8"
webbrowser = "1.0"
tiny_http = "0.12"
notify = "6.1"
handlebars = "6.2"
serde_urlencoded = "0.7"
uuid = { version = "1.10", features = ["v4"] }
shellexpand = "3.1"
hex = "0.4.3"
crc32c = "0.6"
futures = "0.3.32"
markdown2pdf = "1.2.0"
colored = "2.2"

[profile.release]
opt-level = 3
lto = true
strip = true
