[package]
name = "rr"
version = "0.2.0"
edition = "2021"
authors = ["rr contributors"]
description = "Production-grade CLI for syncing documents to reMarkable Paper Pro"
license = "MIT"
rust-version = "1.74"

[lib]
name = "rr"
path = "src/lib.rs"

[[bin]]
name = "rr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.2"
crc32c = "0.6"
dirs = "5.0"
futures = "0.3"
hex = "0.4"
pulldown-cmark = "0.12"
resvg = { version = "0.44", default-features = false, features = ["text"] }
tiny-skia = "0.11"
usvg = { version = "0.44", default-features = false, features = ["text", "system-fonts"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs", "process", "signal", "io-util", "time", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["v4"] }
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.10"

# Keyring lives on macOS + Windows only. Linux would pull libdbus-sys
# (via `sync-secret-service`) or libkeyutils (via `linux-native`), both
# of which need system dev packages — awkward inside a cargo-zigbuild
# cross-build. The TOML config file stays the source of truth on Linux.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
